<resources>
    <string name="app_name">Green Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_text">How many trees would it take to offset the amount of CO2 generated by some of your activities?</string>
    <string name="title_activity_main">Green Calculator</string>
    <string name="calculate_button_text">Calculate</string>
    <string name="title_activity_calculate">Green Calculator</string>
    <string name="text_description_step1">Please, fill the fields and then swipe right for the next step.</string>
    <string name="text_description_step2">Please, fill the fields and then swipe right to see the result.</string>
    <string name="text_energy">Electric Energy (kWh/month)</string>
    <string name="text_LPG">LPG (Gas cylinder/month)</string>
    <string name="text_sewer">Sewer (Nº of people)</string>
    <string name="text_organic_waste">Organic Waste (Kg/month)</string>
    <string name="text_NGV">NGV (m³/month)</string>
    <string name="text_gasoline">Gasoline (Liters/month)</string>
    <string name="text_ethanol">Ethanol (Liters/month)</string>
    <string name="link_take_action">Why not take action?</string>
    <string name="text_description_result">The number of necessary trees to be compensated is:</string>
    <string name="text_compensate_in">Compensating in:</string>
    <string name="text_guapuruvu">Guapuruvu</string>
    <string name="text_eucalyptus">Eucalyptus</string>
</resources>
