<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_description_result"
        android:id="@+id/textViewDescription"
        android:gravity="center"
        android:layout_gravity="center"/>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/numberTrees"
                    android:layout_height="100dp"
                    android:layout_width="100dp"
                    android:text="56"
                    android:textSize="40dp"
                    android:background="@drawable/circle_shape"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center" />

                <View
                    android:layout_margin="30dp"
                    android:layout_height="1dp"
                    android:layout_width="fill_parent"
                    android:background="#000000"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/text_compensate_in"
                    android:id="@+id/textViewCompensate"
                    android:layout_gravity="center"/>

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:checkedButton="@+id/radioButtonGuapuruvu"
                        android:orientation="horizontal">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_guapuruvu"
                            android:id="@+id/radioButtonGuapuruvu"/>

                        <RadioButton
                            android:layout_marginLeft="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_eucalyptus"
                            android:id="@+id/radioButtonEucalyptus"/>

                    </RadioGroup>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/link_take_action"
                    android:id="@+id/textViewTakeAction"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"/>

            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</LinearLayout>